[skin] Fixed Open Receipt Scrollbar not appeared

--- a/web/org.openbravo.retail.posterminal/css/new-obpos-main.css
+++ b/web/org.openbravo.retail.posterminal/css/new-obpos-main.css
@@ -1055,7 +1055,9 @@
 .obUiReceiptsList {}
 
 .obUiReceiptsList-openreceiptslistitemprinter {
-  overflow: hidden auto;
+  overflow: hidden auto !important;
+  max-height: 350px;
+  position: relative;
 }
 
 
